# rotera

./: .gitignore  CHANGELOG.md  README.md  cabal.project  default.nix  rotera.cabal
app/: Client.hs  Main.hs  Repl.hs  Server.hs
nix/: default.nix  nixpkgs.nix  overlay.nix
src/: Rotera.hs
src/Rotera/: Client.hs  Nonblocking.hs  Socket.hs  Unsafe.hs
test/: Main.hs
