cabal-version: 2.2
name: rotera
version: 0.1.0.0
synopsis: persistent rotating queue
description:
  This library provides a persistent rotating queue. The oldest
  entries are phased out once a configurable amount of new data
  has been written to the queue. This is similar to what Apache
  Kafka does. However, unlike Kafka, this queue is not distributed
  across multiple hosts. By design, it can only live on a single
  host.
homepage: https://github.com/andrewthad/rotera
bug-reports: https://github.com/andrewthad/rotera/issues
license: BSD-3-Clause
license-file: LICENSE
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
-- copyright:
category: Database
extra-source-files:  CHANGELOG.md

library
  exposed-modules:
    Rotera
    Rotera.Unsafe
    Rotera.Nonblocking
    Rotera.Socket
    Rotera.Client
  build-depends:
    , base >= 4.11.1.0
    , byte-order >= 0.1.1
    , byteslice >= 0.1.1
    , bytestring >= 0.10.8.2
    , directory >= 1.3.3
    , mmap >= 0.5.9
    , primitive >= 0.7
    , primitive-atomic >= 0.1.0.1
    , primitive-addr >= 0.1
    , primitive-unlifted >= 0.1
    , vector >= 0.12 && < 0.13
    , stm >= 2.5
    , sockets >= 0.4 && <0.5
    , ip >= 1.5
  hs-source-dirs: src
  ghc-options: -O2 -Wall
  default-language: Haskell2010

test-suite test
  Default-Language: Haskell2010
  hs-source-dirs: test
  main-is: Main.hs
  type: exitcode-stdio-1.0
  build-depends:
    , base >= 4.11.1.0
    , byteslice >= 0.1.1
    , bytestring
    , containers
    , directory
    , primitive
    , random
    , rotera
    , tasty
    , tasty-hunit
    , vector
  ghc-options: -O2 -Wall -threaded

executable rotera
  main-is: Main.hs
  default-language: Haskell2010
  hs-source-dirs: app
  ghc-options: -O2 -Wall -threaded
  build-depends:
    , base >= 4.11.1 && <5
    , rotera
    , optparse-applicative >= 0.14 && < 0.15
    , text >= 1.2.3.1
    , primitive
    , primitive-unlifted
    , text >= 1.2.3.1 && <1.3
    , bytestring >= 0.10.8.2 && <0.11
    , byteslice >= 0.1.1
    , vector

executable rotera-server
  main-is: Server.hs
  default-language: Haskell2010
  hs-source-dirs: app
  ghc-options: -O2 -Wall -threaded
  build-depends:
    , base >= 4.11.1 && <5
    , rotera
    , stm
    , text >= 1.2.3.1 && <1.3
    , directory >= 1.3.3 && <1.4
    , bytestring >= 0.10.8.2 && <0.11

executable rotera-client
  main-is: Client.hs
  default-language: Haskell2010
  hs-source-dirs: app
  ghc-options: -O2 -Wall -threaded
  build-depends:
    , base >= 4.11.1 && <5
    , byte-order >= 0.1.1
    , byteslice >= 0.1.1
    , bytestring >= 0.10.8.2 && <0.11
    , ip
    , optparse-applicative >= 0.14 && < 0.15
    , primitive
    , primitive-unlifted
    , repline >= 0.2 && < 0.3
    , rotera
    , sockets
    , split >= 0.2 && <0.3
    , text >= 1.2.3.1 && <1.3
    , vector

executable rotera-repl
  main-is: Repl.hs
  default-language: Haskell2010
  hs-source-dirs: app
  ghc-options: -O2 -Wall -threaded
  build-depends:
    , base >= 4.11.1 && <5
    , byte-order >= 0.1.1
    , byteslice >= 0.1.1
    , bytestring >= 0.10.8.2 && <0.11
    , contiguous >= 0.4.0.1 && < 0.5
    , ip
    , primitive
    , primitive-unlifted
    , repline >= 0.2 && < 0.3
    , rotera
    , sockets
    , text >= 1.2.3.1 && <1.3
    , vector

